feat: Add Contenrization

--- a/docker-compose/nginx/Sys-mgmt-hotel-events.conf
+++ b/docker-compose/nginx/Sys-mgmt-hotel-events.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+#    server_name hotelevents;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
@@ -17,5 +18,31 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+    location /build/ {
+    	proxy_pass http://node:5173;
+    	proxy_http_version 1.1;
+    	proxy_set_header Upgrade $http_upgrade;
+    	proxy_set_header Connection 'upgrade';
+    	proxy_set_header Host $host;
+    }
+
+    location /@vite/ {
+        proxy_pass http://node:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /resources/ {
+        proxy_pass http://node:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
 }
 
