--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,12 @@ services:
     container_name: php-laravel
     restart: unless-stopped
     working_dir: /var/www/
+    user: root
     volumes:
       - ./:/var/www
+    depends_on:
+      - db
+    command: sh -c "sleep 20 && composer install && php artisan key:generate && php artisan migrate && php artisan db:seed && chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache && php-fpm"
     networks:
       - laravel-net
   db:
@@ -46,6 +50,8 @@ services:
     image: node:18
     container_name: node
     working_dir: /var/www
+    ports:
+     - 5173:5173
     volumes:
       - ./:/var/www
     command: sh -c "npm install && npm run dev"
